SigmaCodebackup3rdSep/objects/Picking_Slip__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created Order lookup in pickingslip to handle picking for standard order</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Picking Slips</relationshipLabel>
        <relationshipName>Picking_Slips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Picking_Duration__c</fullName>
        <formula>End_Time__c  -  Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picking Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picking_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Picking Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Picking Slips</relationshipLabel>
        <relationshipName>Picking_Slips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sigma_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sigma Order</label>
        <referenceTo>Sigma_Order__c</referenceTo>
        <relationshipLabel>Picking Slips</relationshipLabel>
        <relationshipName>Picking_Slips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Picked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Picking Slip</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Picking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Picking Slips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>